WIP surface synchronizer (sockets)
Change-Id: I538571f759f90fb45e51dadae2ce72705f558fe4

--- a/demos/ve/mobile.html
+++ b/demos/ve/mobile.html
@@ -144,6 +144,9 @@
 		<!-- papaparse -->
 		<script src="../../lib/papaparse/papaparse.js"></script>
 
+		<!-- socket.io -->
+		<script src="../../node_modules/socket.io-client/socket.io.js"></script>
+
 		<!-- visualEditor.supportCheck -->
 		<script src="../../src/init/ve.init.SupportCheck.js"></script>
 
@@ -220,6 +223,7 @@
 		<script src="../../src/dm/ve.dm.Surface.js"></script>
 		<script src="../../src/dm/ve.dm.SurfaceFragment.js"></script>
 		<script src="../../src/dm/ve.dm.SourceSurfaceFragment.js"></script>
+		<script src="../../src/dm/ve.dm.SurfaceSynchronizer.js"></script>
 		<script src="../../src/dm/ve.dm.DataString.js"></script>
 		<script src="../../src/dm/ve.dm.Document.js"></script>
 		<script src="../../src/dm/ve.dm.DocumentSlice.js"></script>
