--- a/tests/index.html
+++ b/tests/index.html
@@ -144,6 +144,7 @@
 		<script src="../src/dm/ve.dm.Surface.js"></script>
 		<script src="../src/dm/ve.dm.SurfaceFragment.js"></script>
 		<script src="../src/dm/ve.dm.SourceSurfaceFragment.js"></script>
+		<script src="../src/dm/ve.dm.SurfaceSynchronizer.js"></script>
 		<script src="../src/dm/ve.dm.DataString.js"></script>
 		<script src="../src/dm/ve.dm.Document.js"></script>
 		<script src="../src/dm/ve.dm.DocumentSlice.js"></script>
