--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -142,6 +142,9 @@
 		<!-- papaparse -->
 		<script src="../../lib/papaparse/papaparse.js"></script>
 
+		<!-- socket.io -->
+		<script src="../../node_modules/socket.io-client/socket.io.js"></script>
+
 		<!-- visualEditor.supportCheck -->
 		<script src="../../src/init/ve.init.SupportCheck.js"></script>
 
@@ -218,6 +221,7 @@
 		<script src="../../src/dm/ve.dm.Surface.js"></script>
 		<script src="../../src/dm/ve.dm.SurfaceFragment.js"></script>
 		<script src="../../src/dm/ve.dm.SourceSurfaceFragment.js"></script>
+		<script src="../../src/dm/ve.dm.SurfaceSynchronizer.js"></script>
 		<script src="../../src/dm/ve.dm.DataString.js"></script>
 		<script src="../../src/dm/ve.dm.Document.js"></script>
 		<script src="../../src/dm/ve.dm.DocumentSlice.js"></script>
