--- a/tests/index.html
+++ b/tests/index.html
@@ -70,6 +70,9 @@
 		<!-- papaparse -->
 		<script src="../lib/papaparse/papaparse.js"></script>
 
+		<!-- socket.io -->
+		<script src="../node_modules/socket.io-client/socket.io.js"></script>
+
 		<!-- visualEditor.supportCheck -->
 		<script src="../src/init/ve.init.SupportCheck.js"></script>
 
@@ -426,6 +429,7 @@
 		<script src="../src/dm/ve.dm.Change.js"></script>
 		<script src="../src/dm/ve.dm.RebaseServer.js"></script>
 		<script src="../src/dm/ve.dm.RebaseClient.js"></script>
+		<script src="../src/dm/ve.dm.SurfaceSynchronizer.js"></script>
 
 		<!-- visualEditor.test -->
 		<script src="../tests/ve.qunit.js"></script>
