--- a/tests/index.html
+++ b/tests/index.html
@@ -70,6 +70,9 @@
 		<!-- papaparse -->
 		<script src="../lib/papaparse/papaparse.js"></script>
 
+		<!-- socket.io -->
+		<script src="../node_modules/socket.io-client/socket.io.js"></script>
+
 		<!-- visualEditor.supportCheck -->
 		<script src="../src/init/ve.init.SupportCheck.js"></script>
 
@@ -144,6 +147,8 @@
 		<script src="../src/dm/ve.dm.Surface.js"></script>
 		<script src="../src/dm/ve.dm.SurfaceFragment.js"></script>
 		<script src="../src/dm/ve.dm.SourceSurfaceFragment.js"></script>
+		<script src="../src/dm/ve.dm.RebaseClient.js"></script>
+		<script src="../src/dm/ve.dm.SurfaceSynchronizer.js"></script>
 		<script src="../src/dm/ve.dm.DataString.js"></script>
 		<script src="../src/dm/ve.dm.Document.js"></script>
 		<script src="../src/dm/ve.dm.DocumentSlice.js"></script>
@@ -425,7 +430,6 @@
 
 		<!-- visualEditor.rebase -->
 		<script src="../src/dm/ve.dm.RebaseServer.js"></script>
-		<script src="../src/dm/ve.dm.RebaseClient.js"></script>
 
 		<!-- visualEditor.test -->
 		<script src="../tests/ve.qunit.js"></script>
