--- a/tests/index.html
+++ b/tests/index.html
@@ -119,7 +119,6 @@
 		<script src="../src/dm/ve.dm.NodeFactory.js"></script>
 		<script src="../src/dm/ve.dm.AnnotationFactory.js"></script>
 		<script src="../src/dm/ve.dm.AnnotationSet.js"></script>
-		<script src="../src/dm/ve.dm.MetaItemFactory.js"></script>
 		<script src="../src/dm/ve.dm.ClassAttributeNode.js"></script>
 		<script src="../src/dm/ve.dm.AlignableNode.js"></script>
 		<script src="../src/dm/ve.dm.FocusableNode.js"></script>
@@ -157,7 +156,6 @@
 		<script src="../src/dm/selections/ve.dm.TableSelection.js"></script>
 		<script src="../src/dm/lineardata/ve.dm.FlatLinearData.js"></script>
 		<script src="../src/dm/lineardata/ve.dm.ElementLinearData.js"></script>
-		<script src="../src/dm/lineardata/ve.dm.MetaLinearData.js"></script>
 		<script src="../src/dm/nodes/ve.dm.GeneratedContentNode.js"></script>
 		<script src="../src/dm/nodes/ve.dm.AlienNode.js"></script>
 		<script src="../src/dm/nodes/ve.dm.ArticleNode.js"></script>
@@ -228,6 +226,7 @@
 		<script src="../src/ce/ve.ce.BranchNode.js"></script>
 		<script src="../src/ce/ve.ce.ContentBranchNode.js"></script>
 		<script src="../src/ce/ve.ce.LeafNode.js"></script>
+		<script src="../src/ce/ve.ce.MetaItem.js"></script>
 		<script src="../src/ce/ve.ce.ClassAttributeNode.js"></script>
 		<script src="../src/ce/ve.ce.AlignableNode.js"></script>
 		<script src="../src/ce/ve.ce.FocusableNode.js"></script>
@@ -305,6 +304,8 @@
 		<script src="../src/ce/annotations/ve.ce.UnderlineAnnotation.js"></script>
 		<script src="../src/ce/annotations/ve.ce.UserInputAnnotation.js"></script>
 		<script src="../src/ce/annotations/ve.ce.VariableAnnotation.js"></script>
+		<script src="../src/ce/metaitems/ve.ce.AlienMetaItem.js"></script>
+		<script src="../src/ce/metaitems/ve.ce.CommentMetaItem.js"></script>
 		<script src="../src/ui/ve.ui.js"></script>
 		<script src="../src/ui/ve.ui.Overlay.js"></script>
 		<script src="../src/ui/ve.ui.Surface.js"></script>
@@ -474,14 +475,12 @@
 		<script src="../tests/dm/ve.dm.Surface.test.js"></script>
 		<script src="../tests/dm/ve.dm.SurfaceFragment.test.js"></script>
 		<script src="../tests/dm/ve.dm.ModelRegistry.test.js"></script>
-		<script src="../tests/dm/ve.dm.MetaList.test.js"></script>
 		<script src="../tests/dm/ve.dm.Scalable.test.js"></script>
 		<script src="../tests/dm/selections/ve.dm.LinearSelection.test.js"></script>
 		<script src="../tests/dm/selections/ve.dm.NullSelection.test.js"></script>
 		<script src="../tests/dm/selections/ve.dm.TableSelection.test.js"></script>
 		<script src="../tests/dm/lineardata/ve.dm.FlatLinearData.test.js"></script>
 		<script src="../tests/dm/lineardata/ve.dm.ElementLinearData.test.js"></script>
-		<script src="../tests/dm/lineardata/ve.dm.MetaLinearData.test.js"></script>
 		<script src="../tests/ce/ve.ce.test.js"></script>
 		<script src="../tests/ce/ve.ce.Document.test.js"></script>
 		<script src="../tests/ce/ve.ce.Surface.test.js"></script>
