--- a/demos/ve/mobile.html
+++ b/demos/ve/mobile.html
@@ -302,6 +302,7 @@
 		<script src="../../src/ce/ve.ce.BranchNode.js"></script>
 		<script src="../../src/ce/ve.ce.ContentBranchNode.js"></script>
 		<script src="../../src/ce/ve.ce.LeafNode.js"></script>
+		<script src="../../src/ce/ve.ce.MetaItem.js"></script>
 		<script src="../../src/ce/ve.ce.ClassAttributeNode.js"></script>
 		<script src="../../src/ce/ve.ce.AlignableNode.js"></script>
 		<script src="../../src/ce/ve.ce.FocusableNode.js"></script>
@@ -376,6 +377,8 @@
 		<script src="../../src/ce/annotations/ve.ce.UnderlineAnnotation.js"></script>
 		<script src="../../src/ce/annotations/ve.ce.UserInputAnnotation.js"></script>
 		<script src="../../src/ce/annotations/ve.ce.VariableAnnotation.js"></script>
+		<script src="../../src/ce/metaitems/ve.ce.AlienMetaItem.js"></script>
+		<script src="../../src/ce/metaitems/ve.ce.CommentMetaItem.js"></script>
 		<script src="../../src/ui/ve.ui.js"></script>
 		<script src="../../src/ui/ve.ui.Overlay.js"></script>
 		<script src="../../src/ui/ve.ui.Surface.js"></script>
