Store metadata as block nodes in the main data list
Change-Id: I6f92011c27f334b132af290fbf8c85a6808f6472

--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -198,7 +198,6 @@
 		<script src="../../src/dm/ve.dm.NodeFactory.js"></script>
 		<script src="../../src/dm/ve.dm.AnnotationFactory.js"></script>
 		<script src="../../src/dm/ve.dm.AnnotationSet.js"></script>
-		<script src="../../src/dm/ve.dm.MetaItemFactory.js"></script>
 		<script src="../../src/dm/ve.dm.ClassAttributeNode.js"></script>
 		<script src="../../src/dm/ve.dm.AlignableNode.js"></script>
 		<script src="../../src/dm/ve.dm.FocusableNode.js"></script>
@@ -235,7 +234,6 @@
 		<script src="../../src/dm/selections/ve.dm.TableSelection.js"></script>
 		<script src="../../src/dm/lineardata/ve.dm.FlatLinearData.js"></script>
 		<script src="../../src/dm/lineardata/ve.dm.ElementLinearData.js"></script>
-		<script src="../../src/dm/lineardata/ve.dm.MetaLinearData.js"></script>
 		<script src="../../src/dm/nodes/ve.dm.GeneratedContentNode.js"></script>
 		<script src="../../src/dm/nodes/ve.dm.AlienNode.js"></script>
 		<script src="../../src/dm/nodes/ve.dm.ArticleNode.js"></script>
@@ -307,6 +305,7 @@
 		<script src="../../src/ce/ve.ce.BranchNode.js"></script>
 		<script src="../../src/ce/ve.ce.ContentBranchNode.js"></script>
 		<script src="../../src/ce/ve.ce.LeafNode.js"></script>
+		<script src="../../src/ce/ve.ce.MetaItem.js"></script>
 		<script src="../../src/ce/ve.ce.ClassAttributeNode.js"></script>
 		<script src="../../src/ce/ve.ce.AlignableNode.js"></script>
 		<script src="../../src/ce/ve.ce.FocusableNode.js"></script>
@@ -384,6 +383,8 @@
 		<script src="../../src/ce/annotations/ve.ce.UnderlineAnnotation.js"></script>
 		<script src="../../src/ce/annotations/ve.ce.UserInputAnnotation.js"></script>
 		<script src="../../src/ce/annotations/ve.ce.VariableAnnotation.js"></script>
+		<script src="../../src/ce/metaitems/ve.ce.AlienMetaItem.js"></script>
+		<script src="../../src/ce/metaitems/ve.ce.CommentMetaItem.js"></script>
 		<script src="../../src/ui/ve.ui.js"></script>
 		<script src="../../src/ui/ve.ui.Overlay.js"></script>
 		<script src="../../src/ui/ve.ui.Surface.js"></script>
