--- a/tests/index.html
+++ b/tests/index.html
@@ -139,6 +139,7 @@
 		<script src="../src/dm/ve.dm.TableMatrix.js"></script>
 		<script src="../src/dm/ve.dm.TransactionProcessor.js"></script>
 		<script src="../src/dm/ve.dm.Transaction.js"></script>
+		<script src="../src/dm/ve.dm.Change.js"></script>
 		<script src="../src/dm/ve.dm.Selection.js"></script>
 		<script src="../src/dm/ve.dm.Surface.js"></script>
 		<script src="../src/dm/ve.dm.SurfaceFragment.js"></script>
@@ -448,6 +449,7 @@
 		<script src="../tests/dm/ve.dm.InternalList.test.js"></script>
 		<script src="../tests/dm/ve.dm.LinearData.test.js"></script>
 		<script src="../tests/dm/ve.dm.Transaction.test.js"></script>
+		<script src="../tests/dm/ve.dm.Change.test.js"></script>
 		<script src="../tests/dm/ve.dm.TransactionProcessor.test.js"></script>
 		<script src="../tests/dm/ve.dm.APIResultsQueue.test.js"></script>
 		<script src="../tests/dm/ve.dm.Surface.test.js"></script>
