WIP: ve.dm.Change class with rebase operations
Change-Id: I1eccd4ef99d764911994d11d747f13ae42919eff

--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -214,6 +214,7 @@
 		<script src="../../src/dm/ve.dm.TableMatrix.js"></script>
 		<script src="../../src/dm/ve.dm.TransactionProcessor.js"></script>
 		<script src="../../src/dm/ve.dm.Transaction.js"></script>
+		<script src="../../src/dm/ve.dm.Change.js"></script>
 		<script src="../../src/dm/ve.dm.Selection.js"></script>
 		<script src="../../src/dm/ve.dm.Surface.js"></script>
 		<script src="../../src/dm/ve.dm.SurfaceFragment.js"></script>
