--- a/demos/ve/mobile.html
+++ b/demos/ve/mobile.html
@@ -214,6 +214,7 @@
 		<script src="../../src/dm/ve.dm.TableMatrix.js"></script>
 		<script src="../../src/dm/ve.dm.TransactionProcessor.js"></script>
 		<script src="../../src/dm/ve.dm.Transaction.js"></script>
+		<script src="../../src/dm/ve.dm.Change.js"></script>
 		<script src="../../src/dm/ve.dm.Selection.js"></script>
 		<script src="../../src/dm/ve.dm.Surface.js"></script>
 		<script src="../../src/dm/ve.dm.SurfaceFragment.js"></script>
