--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -88,10 +88,38 @@
 		<!-- visualEditor.desktop.standalone.demo -->
 		<link rel=stylesheet href="../../demos/ve/demo.desktop.css" class="stylesheet-read">
 
+		<style type="text/css">
+		.diff-div {
+			border: 1px solid;
+		}
+		.diff-insert {
+			border: 1px solid green;
+		}
+		.diff-remove {
+			border: 1px solid red;
+		}
+		.diff-change {
+			border: 1px solid blue;
+		}
+		.diff-move-up {
+			border-top: 1px dashed;
+		}
+		.diff-move-down {
+			border-bottom: 1px dashed;
+		}
+		del {
+		  color: red;
+		}
+		ins{
+			color: green;
+		}
+		</style>
+
 	</head>
 	<body>
 		<div class="ve-demo-logo"></div>
 		<div class="ve-demo-toolbar ve-demo-targetToolbar"></div>
+		<div class="diff-div">Diff goes here</div>
 		<div class="ve-demo-editor"></div>
 
 		<!-- jquery -->
@@ -150,6 +178,9 @@
 		<script src="../../lib/treeDiffer/diff.treeNode.js"></script>
 		<script src="../../lib/treeDiffer/diff.tree.js"></script>
 		<script src="../../lib/treeDiffer/diff.differ.js"></script>
+
+		<!-- google-diff-match-patch.js -->
+		<script src="../../lib/diff-match-patch/diff_match_patch_uncompressed.js"></script>
 
 		<!-- visualEditor.supportCheck -->
 		<script src="../../src/init/ve.init.SupportCheck.js"></script>
@@ -295,6 +326,7 @@
 		<script src="../../src/dm/metaitems/ve.dm.AlienMetaItem.js"></script>
 		<script src="../../src/dm/metaitems/ve.dm.CommentMetaItem.js"></script>
 		<script src="../../src/dm/nodes/ve.dm.CommentNode.js"></script>
+		<script src="../../src/dm/ve.dm.VisualDiff.js"></script>
 		<script src="../../src/ce/ve.ce.js"></script>
 		<script src="../../src/ce/ve.ce.debug.js"></script>
 		<script src="../../src/ce/ve.ce.TextStateChunk.js"></script>
