--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -494,6 +494,9 @@
 			ve.demoPages = {"aliens":"pages/aliens.html","comments":"pages/comments.html","complex":"pages/complex.html","empty":"pages/empty.html","h1":"pages/h1.html","image":"pages/image.html","isolation":"pages/isolation.html","long":"pages/long.html","rtl":"pages/rtl.html","sections":"pages/sections.html","simple":"pages/simple.html","slugs":"pages/slugs.html","tables":"pages/tables.html"};
 		</script>
 
+		<!-- socket.io -->
+		<script src="/socket.io/socket.io.js"></script>
+
 		<!-- visualEditor.standalone.demo -->
 		<script src="../../demos/ve/ve.demo.js"></script>
 		<script src="../../demos/ve/ve.demo.SurfaceContainer.js"></script>
