--- a/demos/ve/mobile.html
+++ b/demos/ve/mobile.html
@@ -143,6 +143,9 @@
 		<!-- papaparse -->
 		<script src="../../lib/papaparse/papaparse.js"></script>
 
+		<!-- socket.io -->
+		<script src="../../node_modules/socket.io-client/socket.io.js"></script>
+
 		<!-- visualEditor.supportCheck -->
 		<script src="../../src/init/ve.init.SupportCheck.js"></script>
 
