WIP/EXPERIMENTAL Make ve.dm.VisualDiff and ve.ui.DiffElement
A ve.dm.VisualDiff gets everything that is needed to build a
visualisation of the diff:
- a mapping of old nodes to their analogous new nodes (changed
or unchanged)
- the moves that map a changed old node to its analogous new
node
- a list of removed nodes
- a list of inserted nodes
NB Nodes are ordered, so it is also possible to infer moves.

A ve.ui.DiffElement displays the diff. Currently assumes a
unified diff but could also produce a side-by-side diff.

Change-Id: I23295efd75e9e37b273b99a361ded99a98217295

--- a/demos/ve/mobile.html
+++ b/demos/ve/mobile.html
@@ -158,6 +158,15 @@
 		<!-- dom-classlist-shim -->
 		<script src="../../lib/classList/classList.js"></script>
 
+		<!-- treeDiffer -->
+		<script src="../../lib/treeDiffer/treeDiff.js"></script>
+		<script src="../../lib/treeDiffer/treeNode.js"></script>
+		<script src="../../lib/treeDiffer/tree.js"></script>
+		<script src="../../lib/treeDiffer/differ.js"></script>
+
+		<!-- diffMatchPatch -->
+		<script src="../../lib/diff-match-patch/diff_match_patch_uncompressed.js"></script>
+
 		<!-- visualEditor.base.build -->
 		<script src="../../src/ve.js"></script>
 		<script src="../../src/ve.utils.js"></script>
@@ -226,6 +235,7 @@
 		<script src="../../src/dm/ve.dm.DocumentSynchronizer.js"></script>
 		<script src="../../src/dm/ve.dm.IndexValueStore.js"></script>
 		<script src="../../src/dm/ve.dm.Converter.js"></script>
+		<script src="../../src/dm/ve.dm.VisualDiff.js"></script>
 		<script src="../../src/dm/selections/ve.dm.LinearSelection.js"></script>
 		<script src="../../src/dm/selections/ve.dm.NullSelection.js"></script>
 		<script src="../../src/dm/selections/ve.dm.TableSelection.js"></script>
@@ -446,6 +456,7 @@
 		<script src="../../src/ui/datatransferhandlers/ve.ui.HTMLFileTransferHandler.js"></script>
 		<script src="../../src/ui/datatransferhandlers/ve.ui.UrlStringTransferHandler.js"></script>
 		<script src="../../src/ui/elements/ve.ui.PreviewElement.js"></script>
+		<script src="../../src/ui/elements/ve.ui.DiffElement.js"></script>
 		<script src="../../src/ui/windowmanagers/ve.ui.ToolbarDialogWindowManager.js"></script>
 		<script src="../../src/ui/widgets/ve.ui.AlignWidget.js"></script>
 		<script src="../../src/ui/widgets/ve.ui.LanguageSearchWidget.js"></script>
