--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -157,6 +157,15 @@
 		<!-- dom-classlist-shim -->
 		<script src="../../lib/classList/classList.js"></script>
 
+		<!-- treeDiffer -->
+		<script src="../../lib/treeDiffer/treeDiff.js"></script>
+		<script src="../../lib/treeDiffer/treeNode.js"></script>
+		<script src="../../lib/treeDiffer/tree.js"></script>
+		<script src="../../lib/treeDiffer/differ.js"></script>
+
+		<!-- diffMatchPatch -->
+		<script src="../../lib/diff-match-patch/diff_match_patch_uncompressed.js"></script>
+
 		<!-- visualEditor.base.build -->
 		<script src="../../src/ve.js"></script>
 		<script src="../../src/ve.utils.js"></script>
@@ -225,6 +234,7 @@
 		<script src="../../src/dm/ve.dm.DocumentSynchronizer.js"></script>
 		<script src="../../src/dm/ve.dm.IndexValueStore.js"></script>
 		<script src="../../src/dm/ve.dm.Converter.js"></script>
+		<script src="../../src/dm/ve.dm.VisualDiff.js"></script>
 		<script src="../../src/dm/selections/ve.dm.LinearSelection.js"></script>
 		<script src="../../src/dm/selections/ve.dm.NullSelection.js"></script>
 		<script src="../../src/dm/selections/ve.dm.TableSelection.js"></script>
