--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -12,21 +12,6 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<title>VisualEditor Standalone Demo</title>
 
-		<!-- visualEditor.standalone.build -->
-		<link rel=stylesheet href="../../src/ui/styles/ve.ui.DebugBar.css">
-
-		<!-- oojs-ui-apex -->
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex.css" class="stylesheet-ltr">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex.rtl.css" class="stylesheet-rtl">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-core.css" class="stylesheet-ltr">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-core.rtl.css" class="stylesheet-rtl">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-advanced.css" class="stylesheet-ltr">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-advanced.rtl.css" class="stylesheet-rtl">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-styling.css" class="stylesheet-ltr">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-styling.rtl.css" class="stylesheet-rtl">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-list.css" class="stylesheet-ltr">
-		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-list.rtl.css" class="stylesheet-rtl">
-
 		<!-- visualEditor.core.build -->
 		<link rel=stylesheet href="../../src/ce/styles/nodes/ve.ce.FocusableNode.css" class="stylesheet-ve">
 		<link rel=stylesheet href="../../src/ce/styles/nodes/ve.ce.AlienNode.css" class="stylesheet-ve">
@@ -49,7 +34,6 @@
 		<link rel=stylesheet href="../../src/ui/styles/dialogs/ve.ui.FindAndReplaceDialog.css" class="stylesheet-ve">
 		<link rel=stylesheet href="../../src/ui/styles/dialogs/ve.ui.ProgressDialog.css" class="stylesheet-ve">
 		<link rel=stylesheet href="../../src/ui/styles/dialogs/ve.ui.SpecialCharacterDialog.css" class="stylesheet-ve">
-		<link rel=stylesheet href="../../src/ui/styles/elements/ve.ui.DiffElement.css" class="stylesheet-ve">
 		<link rel=stylesheet href="../../src/ui/styles/tools/ve.ui.FormatTool.css" class="stylesheet-ve">
 		<link rel=stylesheet href="../../src/ui/styles/widgets/ve.ui.LanguageInputWidget.css" class="stylesheet-ve">
 		<link rel=stylesheet href="../../src/ui/styles/widgets/ve.ui.LanguageSearchWidget.css" class="stylesheet-ve">
@@ -73,6 +57,24 @@
 		<link rel=stylesheet href="../../src/ui/styles/widgets/ve.ui.TargetWidget.css" class="stylesheet-ve">
 		<link rel=stylesheet href="../../src/ui/styles/ve.ui.TableLineContext.css" class="stylesheet-ve">
 		<link rel=stylesheet href="../../src/ui/styles/ve.ui.Toolbar.css" class="stylesheet-ve">
+
+		<!-- visualEditor.diffing -->
+		<link rel=stylesheet href="../../src/ui/styles/elements/ve.ui.DiffElement.css">
+
+		<!-- visualEditor.standalone.build -->
+		<link rel=stylesheet href="../../src/ui/styles/ve.ui.DebugBar.css">
+
+		<!-- oojs-ui-apex -->
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex.css" class="stylesheet-ltr">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex.rtl.css" class="stylesheet-rtl">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-core.css" class="stylesheet-ltr">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-core.rtl.css" class="stylesheet-rtl">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-advanced.css" class="stylesheet-ltr">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-advanced.rtl.css" class="stylesheet-rtl">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-styling.css" class="stylesheet-ltr">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-styling.rtl.css" class="stylesheet-rtl">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-list.css" class="stylesheet-ltr">
+		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-list.rtl.css" class="stylesheet-rtl">
 
 		<!-- visualEditor.desktop.build -->
 		<link rel=stylesheet href="../../src/ui/styles/ve.ui.DesktopContext.css">
@@ -159,15 +161,6 @@
 		<!-- dom-classlist-shim -->
 		<script src="../../lib/classList/classList.js"></script>
 
-		<!-- treeDiffer -->
-		<script src="../../lib/treeDiffer/treeDiffer.js"></script>
-		<script src="../../lib/treeDiffer/treeDiffer.TreeNode.js"></script>
-		<script src="../../lib/treeDiffer/treeDiffer.Tree.js"></script>
-		<script src="../../lib/treeDiffer/treeDiffer.Differ.js"></script>
-
-		<!-- diffMatchPatch -->
-		<script src="../../lib/diff-match-patch/diff_match_patch_uncompressed.js"></script>
-
 		<!-- visualEditor.base.build -->
 		<script src="../../src/ve.js"></script>
 		<script src="../../src/ve.utils.js"></script>
@@ -177,14 +170,6 @@
 		<script src="../../src/init/ve.init.js"></script>
 		<script src="../../src/init/ve.init.Platform.js"></script>
 		<script src="../../src/init/ve.init.Target.js"></script>
-
-		<!-- visualEditor.standalone.build -->
-		<script src="../../src/init/sa/ve.init.sa.js"></script>
-		<script src="../../src/init/sa/ve.init.sa.Platform.js"></script>
-		<script src="../../src/init/sa/ve.init.sa.Target.js"></script>
-
-		<!-- oojs-ui-apex -->
-		<script src="../../lib/oojs-ui/oojs-ui-apex.js"></script>
 
 		<!-- visualEditor.core.build -->
 		<script src="../../src/ve.Range.js"></script>
@@ -196,7 +181,6 @@
 		<script src="../../src/ve.Document.js"></script>
 		<script src="../../src/ve.EventSequencer.js"></script>
 		<script src="../../src/ve.Scheduler.js"></script>
-		<script src="../../src/ve.DiffTreeNode.js"></script>
 		<script src="../../src/ve.Filibuster.js"></script>
 		<script src="../../src/dm/ve.dm.js"></script>
 		<script src="../../src/dm/ve.dm.Model.js"></script>
@@ -237,7 +221,6 @@
 		<script src="../../src/dm/ve.dm.DocumentSynchronizer.js"></script>
 		<script src="../../src/dm/ve.dm.IndexValueStore.js"></script>
 		<script src="../../src/dm/ve.dm.Converter.js"></script>
-		<script src="../../src/dm/ve.dm.VisualDiff.js"></script>
 		<script src="../../src/dm/selections/ve.dm.LinearSelection.js"></script>
 		<script src="../../src/dm/selections/ve.dm.NullSelection.js"></script>
 		<script src="../../src/dm/selections/ve.dm.TableSelection.js"></script>
@@ -457,9 +440,7 @@
 		<script src="../../src/ui/datatransferhandlers/ve.ui.PlainTextFileTransferHandler.js"></script>
 		<script src="../../src/ui/datatransferhandlers/ve.ui.HTMLFileTransferHandler.js"></script>
 		<script src="../../src/ui/datatransferhandlers/ve.ui.UrlStringTransferHandler.js"></script>
-		<script src="../../src/ui/dialogs/ve.ui.DiffDialog.js"></script>
 		<script src="../../src/ui/elements/ve.ui.PreviewElement.js"></script>
-		<script src="../../src/ui/elements/ve.ui.DiffElement.js"></script>
 		<script src="../../src/ui/windowmanagers/ve.ui.ToolbarDialogWindowManager.js"></script>
 		<script src="../../src/ui/widgets/ve.ui.AlignWidget.js"></script>
 		<script src="../../src/ui/widgets/ve.ui.LanguageSearchWidget.js"></script>
@@ -492,6 +473,29 @@
 		<script src="../../src/ui/inspectors/ve.ui.CommentInspector.js"></script>
 		<script src="../../src/ui/inspectors/ve.ui.LanguageInspector.js"></script>
 		<script src="../../src/ui/pages/ve.ui.SpecialCharacterPage.js"></script>
+
+		<!-- treeDiffer -->
+		<script src="../../lib/treeDiffer/treeDiffer.js"></script>
+		<script src="../../lib/treeDiffer/treeDiffer.TreeNode.js"></script>
+		<script src="../../lib/treeDiffer/treeDiffer.Tree.js"></script>
+		<script src="../../lib/treeDiffer/treeDiffer.Differ.js"></script>
+
+		<!-- diffMatchPatch -->
+		<script src="../../lib/diff-match-patch/diff_match_patch_uncompressed.js"></script>
+
+		<!-- visualEditor.diffing -->
+		<script src="../../src/ve.DiffTreeNode.js"></script>
+		<script src="../../src/dm/ve.dm.VisualDiff.js"></script>
+		<script src="../../src/ui/dialogs/ve.ui.DiffDialog.js"></script>
+		<script src="../../src/ui/elements/ve.ui.DiffElement.js"></script>
+
+		<!-- visualEditor.standalone.build -->
+		<script src="../../src/init/sa/ve.init.sa.js"></script>
+		<script src="../../src/init/sa/ve.init.sa.Platform.js"></script>
+		<script src="../../src/init/sa/ve.init.sa.Target.js"></script>
+
+		<!-- oojs-ui-apex -->
+		<script src="../../lib/oojs-ui/oojs-ui-apex.js"></script>
 
 		<!-- visualEditor.desktop.build -->
 		<script src="../../src/ui/ve.ui.DesktopSurface.js"></script>
