--- a/tests/index.html
+++ b/tests/index.html
@@ -85,15 +85,6 @@
 		<!-- dom-classlist-shim -->
 		<script src="../lib/classList/classList.js"></script>
 
-		<!-- treeDiffer -->
-		<script src="../lib/treeDiffer/treeDiffer.js"></script>
-		<script src="../lib/treeDiffer/treeDiffer.TreeNode.js"></script>
-		<script src="../lib/treeDiffer/treeDiffer.Tree.js"></script>
-		<script src="../lib/treeDiffer/treeDiffer.Differ.js"></script>
-
-		<!-- diffMatchPatch -->
-		<script src="../lib/diff-match-patch/diff_match_patch_uncompressed.js"></script>
-
 		<!-- visualEditor.base.build -->
 		<script src="../src/ve.js"></script>
 		<script src="../src/ve.utils.js"></script>
@@ -102,14 +93,6 @@
 		<script src="../src/init/ve.init.js"></script>
 		<script src="../src/init/ve.init.Platform.js"></script>
 		<script src="../src/init/ve.init.Target.js"></script>
-
-		<!-- visualEditor.standalone.build -->
-		<script src="../src/init/sa/ve.init.sa.js"></script>
-		<script src="../src/init/sa/ve.init.sa.Platform.js"></script>
-		<script src="../src/init/sa/ve.init.sa.Target.js"></script>
-
-		<!-- oojs-ui-apex -->
-		<script src="../lib/oojs-ui/oojs-ui-apex.js"></script>
 
 		<!-- visualEditor.core.build -->
 		<script src="../src/ve.Range.js"></script>
@@ -121,7 +104,6 @@
 		<script src="../src/ve.Document.js"></script>
 		<script src="../src/ve.EventSequencer.js"></script>
 		<script src="../src/ve.Scheduler.js"></script>
-		<script src="../src/ve.DiffTreeNode.js"></script>
 		<script src="../src/dm/ve.dm.js"></script>
 		<script src="../src/dm/ve.dm.Model.js"></script>
 		<script src="../src/dm/ve.dm.ModelFactory.js"></script>
@@ -161,7 +143,6 @@
 		<script src="../src/dm/ve.dm.DocumentSynchronizer.js"></script>
 		<script src="../src/dm/ve.dm.IndexValueStore.js"></script>
 		<script src="../src/dm/ve.dm.Converter.js"></script>
-		<script src="../src/dm/ve.dm.VisualDiff.js"></script>
 		<script src="../src/dm/selections/ve.dm.LinearSelection.js"></script>
 		<script src="../src/dm/selections/ve.dm.NullSelection.js"></script>
 		<script src="../src/dm/selections/ve.dm.TableSelection.js"></script>
@@ -379,9 +360,7 @@
 		<script src="../src/ui/datatransferhandlers/ve.ui.PlainTextFileTransferHandler.js"></script>
 		<script src="../src/ui/datatransferhandlers/ve.ui.HTMLFileTransferHandler.js"></script>
 		<script src="../src/ui/datatransferhandlers/ve.ui.UrlStringTransferHandler.js"></script>
-		<script src="../src/ui/dialogs/ve.ui.DiffDialog.js"></script>
 		<script src="../src/ui/elements/ve.ui.PreviewElement.js"></script>
-		<script src="../src/ui/elements/ve.ui.DiffElement.js"></script>
 		<script src="../src/ui/windowmanagers/ve.ui.ToolbarDialogWindowManager.js"></script>
 		<script src="../src/ui/widgets/ve.ui.AlignWidget.js"></script>
 		<script src="../src/ui/widgets/ve.ui.LanguageSearchWidget.js"></script>
@@ -414,6 +393,29 @@
 		<script src="../src/ui/inspectors/ve.ui.CommentInspector.js"></script>
 		<script src="../src/ui/inspectors/ve.ui.LanguageInspector.js"></script>
 		<script src="../src/ui/pages/ve.ui.SpecialCharacterPage.js"></script>
+
+		<!-- treeDiffer -->
+		<script src="../lib/treeDiffer/treeDiffer.js"></script>
+		<script src="../lib/treeDiffer/treeDiffer.TreeNode.js"></script>
+		<script src="../lib/treeDiffer/treeDiffer.Tree.js"></script>
+		<script src="../lib/treeDiffer/treeDiffer.Differ.js"></script>
+
+		<!-- diffMatchPatch -->
+		<script src="../lib/diff-match-patch/diff_match_patch_uncompressed.js"></script>
+
+		<!-- visualEditor.diffing -->
+		<script src="../src/ve.DiffTreeNode.js"></script>
+		<script src="../src/dm/ve.dm.VisualDiff.js"></script>
+		<script src="../src/ui/dialogs/ve.ui.DiffDialog.js"></script>
+		<script src="../src/ui/elements/ve.ui.DiffElement.js"></script>
+
+		<!-- visualEditor.standalone.build -->
+		<script src="../src/init/sa/ve.init.sa.js"></script>
+		<script src="../src/init/sa/ve.init.sa.Platform.js"></script>
+		<script src="../src/init/sa/ve.init.sa.Target.js"></script>
+
+		<!-- oojs-ui-apex -->
+		<script src="../lib/oojs-ui/oojs-ui-apex.js"></script>
 
 		<!-- visualEditor.desktop.build -->
 		<script src="../src/ui/ve.ui.DesktopSurface.js"></script>
