--- a/tests/index.html
+++ b/tests/index.html
@@ -423,6 +423,10 @@
 		<!-- visualEditor.desktop.standalone -->
 		<script src="../src/init/sa/ve.init.sa.DesktopTarget.js"></script>
 
+		<!-- visualEditor.rebase -->
+		<script src="../src/dm/ve.dm.RebaseServer.js"></script>
+		<script src="../src/dm/ve.dm.RebaseClient.js"></script>
+
 		<!-- visualEditor.test -->
 		<script src="../tests/ve.qunit.js"></script>
 		<script src="../tests/ve.test.utils.js"></script>
@@ -450,6 +454,7 @@
 		<script src="../tests/dm/ve.dm.LinearData.test.js"></script>
 		<script src="../tests/dm/ve.dm.Transaction.test.js"></script>
 		<script src="../tests/dm/ve.dm.Change.test.js"></script>
+		<script src="../tests/dm/ve.dm.RebaseServer.test.js"></script>
 		<script src="../tests/dm/ve.dm.TransactionProcessor.test.js"></script>
 		<script src="../tests/dm/ve.dm.APIResultsQueue.test.js"></script>
 		<script src="../tests/dm/ve.dm.Surface.test.js"></script>
