build: Load OOjs from npm as a dependency, not from lib/
Change-Id: I23f1e0933023ed196b32af00d887674de21c5c4b

--- a/demos/trigger/index.html
+++ b/demos/trigger/index.html
@@ -96,7 +96,7 @@
 			</tr>
 		</table>
 		<script src="../../node_modules/jquery/dist/jquery.js"></script>
-		<script src="../../lib/oojs/oojs.jquery.js"></script>
+		<script src="../../node_modules/oojs/dist/oojs.jquery.js"></script>
 		<script src="../../lib/oojs-ui/oojs-ui.js"></script>
 		<script src="../../lib/unicodejs/unicodejs.js"></script>
 		<script src="../../src/ve.js"></script>
