--- a/demos/ve/eventLogger.html
+++ b/demos/ve/eventLogger.html
@@ -58,7 +58,7 @@
 		<textarea class="ve-demo-log"></textarea>
 
 		<script src="../../node_modules/jquery/dist/jquery.js"></script>
-		<script src="../../lib/oojs/oojs.jquery.js"></script>
+		<script src="../../node_modules/oojs/dist/oojs.jquery.js"></script>
 		<script src="../../lib/oojs-ui/oojs-ui.js"></script>
 		<script src="../../lib/unicodejs/unicodejs.js"></script>
 		<script src="../../src/ve.js"></script>
