--- a/demos/ve/eventSequencer.html
+++ b/demos/ve/eventSequencer.html
@@ -16,7 +16,7 @@
 			}
 		</style>
 		<script src="../../node_modules/jquery/dist/jquery.js"></script>
-		<script src="../../lib/oojs/oojs.jquery.js"></script>
+		<script src="../../node_modules/oojs/dist/oojs.jquery.js"></script>
 		<script src="../../lib/unicodejs/unicodejs.js"></script>
 		<script src="../../src/ve.js"></script>
 		<script src="../../src/ve.utils.js"></script>
