--- a/tests/index.html
+++ b/tests/index.html
@@ -26,7 +26,7 @@
 		<script src="../node_modules/jquery/dist/jquery.js"></script>
 
 		<!-- oojs -->
-		<script src="../lib/oojs/oojs.jquery.js"></script>
+		<script src="../node_modules/oojs/dist/oojs.jquery.js"></script>
 
 		<!-- oojs-ui -->
 		<script src="../lib/oojs-ui/oojs-ui-core.js"></script>
