OOjs: remove internal lib/ version and use npm instead
Change-Id: I23f1e0933023ed196b32af00d887674de21c5c4b

--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -102,7 +102,7 @@
 		<script src="../../lib/jquery/jquery.js"></script>
 
 		<!-- oojs -->
-		<script src="../../lib/oojs/oojs.jquery.js"></script>
+		<script src="../../node_modules/oojs/dist/oojs.jquery.js"></script>
 
 		<!-- oojs-ui -->
 		<script src="../../lib/oojs-ui/oojs-ui-core.js"></script>
