--- a/.jsduck/eg-iframe.html
+++ b/.jsduck/eg-iframe.html
@@ -30,7 +30,7 @@
 	</head>
 	<body>
 		<!-- jquery -->
-		<script src="../lib/jquery/jquery.js"></script>
+		<script src="../node_modules/jquery/dist/jquery.js"></script>
 
 		<!-- oojs -->
 		<script src="../lib/oojs/oojs.jquery.js"></script>
