--- a/demos/trigger/index.html
+++ b/demos/trigger/index.html
@@ -95,7 +95,7 @@
 				</td>
 			</tr>
 		</table>
-		<script src="../../lib/jquery/jquery.js"></script>
+		<script src="../../node_modules/jquery/dist/jquery.js"></script>
 		<script src="../../lib/oojs/oojs.jquery.js"></script>
 		<script src="../../lib/oojs-ui/oojs-ui.js"></script>
 		<script src="../../lib/unicodejs/unicodejs.js"></script>
