--- a/demos/ve/desktop.html
+++ b/demos/ve/desktop.html
@@ -99,7 +99,7 @@
 		<div class="ve-demo-editor"></div>
 
 		<!-- jquery -->
-		<script src="../../lib/jquery/jquery.js"></script>
+		<script src="../../node_modules/jquery/dist/jquery.js"></script>
 
 		<!-- oojs -->
 		<script src="../../lib/oojs/oojs.jquery.js"></script>
