--- a/demos/ve/eventLogger.html
+++ b/demos/ve/eventLogger.html
@@ -57,7 +57,7 @@
 		<div class="ve-demo-content" contenteditable="true"></div>
 		<textarea class="ve-demo-log"></textarea>
 
-		<script src="../../lib/jquery/jquery.js"></script>
+		<script src="../../node_modules/jquery/dist/jquery.js"></script>
 		<script src="../../lib/oojs/oojs.jquery.js"></script>
 		<script src="../../lib/oojs-ui/oojs-ui.js"></script>
 		<script src="../../lib/unicodejs/unicodejs.js"></script>
