--- a/demos/ve/eventSequencer.html
+++ b/demos/ve/eventSequencer.html
@@ -15,7 +15,7 @@
 				border: 1px solid red;
 			}
 		</style>
-		<script src="../../lib/jquery/jquery.js"></script>
+		<script src="../../node_modules/jquery/dist/jquery.js"></script>
 		<script src="../../lib/oojs/oojs.jquery.js"></script>
 		<script src="../../lib/unicodejs/unicodejs.js"></script>
 		<script src="../../src/ve.js"></script>
