--- a/demos/ve/minimal-rtl.html
+++ b/demos/ve/minimal-rtl.html
@@ -37,7 +37,7 @@
 		</div>
 
 		<!-- jquery -->
-		<script src="../../lib/jquery/jquery.js"></script>
+		<script src="../../node_modules/jquery/dist/jquery.js"></script>
 
 		<!-- oojs -->
 		<script src="../../lib/oojs/oojs.jquery.js"></script>
