--- a/tests/index.html
+++ b/tests/index.html
@@ -23,7 +23,7 @@
 		<script src="../node_modules/qunitjs/qunit/qunit.js"></script>
 
 		<!-- jquery -->
-		<script src="../lib/jquery/jquery.js"></script>
+		<script src="../node_modules/jquery/dist/jquery.js"></script>
 
 		<!-- oojs -->
 		<script src="../lib/oojs/oojs.jquery.js"></script>
