--- a/tests/index.html
+++ b/tests/index.html
@@ -435,6 +435,7 @@
 		<script src="../lib/socket.io-client/socket.io.min.js"></script>
 
 		<!-- visualEditor.rebase -->
+		<script src="../src/ve.utils-es6.js"></script>
 		<script src="../src/dm/ve.dm.Change.js"></script>
 		<script src="../src/dm/ve.dm.RebaseServer.js"></script>
 		<script src="../src/dm/ve.dm.RebaseClient.js"></script>
